--- a/main.css
+++ b/main.css
@@ -261,6 +261,7 @@ section {
         flex-direction: column;
         box-shadow: none;
         height: 12rem;
+        margin-top: 3rem;
     }
     .avatar-container {
         box-shadow: none;
@@ -307,7 +308,7 @@ section {
     box-shadow: 8px 8px 5px rgba(208, 208, 208, 0.25); 
   /*  box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.1);   */
   /*  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);  */
-    border-radius: 40px;
+    border-radius: 5px;
 }
 
 .audio-img-container {
@@ -324,7 +325,7 @@ section {
     height: 100%;
     object-fit: cover;
     object-position: 50% 15%;
-    border-radius: 40px 40px 0 0;
+    border-radius: 5px 5px 0 0;
 }
 
 .audio-item audio {
@@ -342,6 +343,10 @@ audio::-webkit-media-controls-panel {
     font-variant: small-caps;
     font-size: 1.2em;
     padding-bottom: 1rem;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -415,6 +420,13 @@ audio::-webkit-media-controls-panel {
         margin-bottom: 6rem;
         width: 380px;
     }
+
+    audio::-webkit-media-controls-play-button,
+    audio::-webkit-media-controls-panel {
+        width: 380px;
+        margin: 5px 5px 0;
+        border-radius: 0px;
+}
 
     .services-container {
         width: 80%;
@@ -829,7 +841,7 @@ audio::-webkit-media-controls-panel {
     width: 350px;
     height: 230px;
     box-shadow: 8px 8px 5px rgba(208, 208, 208, 0.5); 
-    border-radius: 20px;   
+    border-radius: 5px;   
 }
 
 @media only screen and (max-width: 550px) {
@@ -845,8 +857,6 @@ audio::-webkit-media-controls-panel {
     .youtube-video iframe {
         width: 325px;
         height: 200px;
-        box-shadow: 8px 8px 5px rgba(208, 208, 208, 0.5); 
-        border-radius: 20px;   
     }
 }
 
